--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/opentype.js": "^1.3.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "esbuild": "^0.24.0",
